fix: refactoring methods